# supermariowar-nx

./: .gitmodules  CMakeLists.txt  README.md  Toolchain.cmake  _env.sh  build.sh
enetshim/: CMakeLists.txt  arpa_inet_shim.c  arpa_inet_shim.h
patches/: cmakelist-submodule-root.patch  smw-switch-input.patch  smw-switch-res.patch
